src/popup/pages/popup.scss
$primary-color: darkblue;
$background-color: #BADA55;

// Chrome applies an 8px margin by default (gross).
body {
    margin: 0px;
    // max-height: 600px;
    // min-width: 428px; // 428px is width of the overlay
    //width: 500px;
}

.popupContainer {
    padding: 10px;
}

.internalTab {
    min-height: 80px;
    max-height: 520px;
    overflow: auto;
}

.internalTabSettings {
    min-height: 250px;
    max-height: 520px;
    overflow: auto;
}

.internalTabDapplets {
    min-height: 80px;
    max-height: 470px;
    overflow: auto;
}

.popup {
    width: 493px;
}

